# float-codec

./: .gitignore  Cargo.toml  README.md
data/: HistoricalData_1654792445080.csv  close.txt  extract_floats.py  gorilla-xor-encoding.py  high.txt  low.txt  open.txt
results/: q_compress  tsz  zstd
results/floats/: baseline_floats.txt  blosc_lz4_floats.txt  gorilla_floats.txt  lzzzz_bytes_floats.txt  lzzzz_floats.txt  q_compress_floats.txt  snap_floats.txt  tsz_floats.txt  zfp_floats.txt  zstd_floats.txt
results/floats-chunk/: baseline_floats.txt  gorilla2_floats.txt  gorilla_floats.txt  lzzzz_floats.txt  q_compress_floats.txt  snap_floats.txt  tsz_floats.txt  zstd_floats.txt
results/high/: baseline_high.txt  gorilla2_high.txt  lzzzz_high.txt  q_compress_high.txt  snap_high.txt  tsz_high.txt  zfp_high.txt  zstd_high.txt
src/: main.rs
